Implemented distance query